// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainPage render renders MainPage component with active genre eq Action 1`] = `
Array [
  <section
    className="movie-card"
  >
    <div
      className="movie-card__bg"
    >
      <img
        alt="Bronson"
        src="https://assets.htmlacademy.ru/intensives/javascript-3/film/background/bronson.jpg"
        style={
          Object {
            "backgroundColor": "#73B39A",
          }
        }
      />
    </div>
    <h1
      className="visually-hidden"
    >
      WTW
    </h1>
    <header
      className="page-header movie-card__head"
    >
      <div
        className="logo"
      >
        <a
          className="logo__link "
        >
          <span
            className="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            className="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            className="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <div
        className="user-block"
      >
        <a
          href="/mylist"
          onClick={[Function]}
        >
          <div
            className="user-block__avatar"
          >
            <img
              alt="User avatar"
              height="63"
              src="img/avatar.jpg"
              width="63"
            />
          </div>
        </a>
      </div>
    </header>
    <div
      className="movie-card__wrap"
    >
      <div
        className="movie-card__info"
      >
        <div
          className="movie-card__poster"
        >
          <img
            alt="Bronson"
            height="327"
            src="https://assets.htmlacademy.ru/intensives/javascript-3/film/poster/bronson.jpg"
            width="218"
          />
        </div>
        <div
          className="movie-card__desc"
        >
          <h2
            className="movie-card__title"
          >
            Bronson
          </h2>
          <p
            className="movie-card__meta"
          >
            <span
              className="movie-card__genre"
            >
              Action
            </span>
            <span
              className="movie-card__year"
            >
              2008
            </span>
          </p>
          <div
            className="movie-card__buttons"
          >
            <button
              className="btn btn--play movie-card__button"
              onClick={[Function]}
              type="button"
            >
              <svg
                height="19"
                viewBox="0 0 19 19"
                width="19"
              >
                <use
                  xlinkHref="#play-s"
                />
              </svg>
              <span>
                Play
              </span>
            </button>
            <button
              className="btn btn--list movie-card__button"
              onClick={[Function]}
              type="button"
            >
              <svg
                height="20"
                viewBox="0 0 19 20"
                width="19"
              >
                <use
                  xlinkHref="#add"
                />
              </svg>
              <span>
                My list
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </section>,
  <div
    className="page-content"
  >
    <section
      className="catalog"
    >
      <h2
        className="catalog__title visually-hidden"
      >
        Catalog
      </h2>
      <ul
        className="catalog__genres-list"
      >
        <li
          className="catalog__genres-item "
          data-genre="All genres"
          onClick={[Function]}
        >
          <a
            className="catalog__genres-link"
            href="#"
          >
            All genres
          </a>
        </li>
        <li
          className="catalog__genres-item catalog__genres-item--active"
          data-genre="Action"
          onClick={[Function]}
        >
          <a
            className="catalog__genres-link"
            href="#"
          >
            Action
          </a>
        </li>
        <li
          className="catalog__genres-item "
          data-genre="Crime"
          onClick={[Function]}
        >
          <a
            className="catalog__genres-link"
            href="#"
          >
            Crime
          </a>
        </li>
        <li
          className="catalog__genres-item "
          data-genre="Drama"
          onClick={[Function]}
        >
          <a
            className="catalog__genres-link"
            href="#"
          >
            Drama
          </a>
        </li>
        <li
          className="catalog__genres-item "
          data-genre="Adventure"
          onClick={[Function]}
        >
          <a
            className="catalog__genres-link"
            href="#"
          >
            Adventure
          </a>
        </li>
        <li
          className="catalog__genres-item "
          data-genre="Comedy"
          onClick={[Function]}
        >
          <a
            className="catalog__genres-link"
            href="#"
          >
            Comedy
          </a>
        </li>
      </ul>
      <div
        className="catalog__movies-list"
      >
        <article
          className="small-movie-card catalog__movies-card"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <a
            className="small-movie-card__link"
            href="/films/1"
            onClick={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height={175}
                muted={true}
                poster="https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/bronson.jpg"
                src="https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm"
                style={
                  Object {
                    "height": "100%",
                    "objectFit": "cover",
                    "verticalAlign": "top",
                    "width": "100%",
                  }
                }
                width={280}
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              Bronson
            </h3>
          </a>
        </article>
        <article
          className="small-movie-card catalog__movies-card"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <a
            className="small-movie-card__link"
            href="/films/2"
            onClick={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height={175}
                muted={true}
                poster="https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/pulp-fiction.jpg"
                src="https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm"
                style={
                  Object {
                    "height": "100%",
                    "objectFit": "cover",
                    "verticalAlign": "top",
                    "width": "100%",
                  }
                }
                width={280}
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              Pulp Fiction
            </h3>
          </a>
        </article>
        <article
          className="small-movie-card catalog__movies-card"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <a
            className="small-movie-card__link"
            href="/films/3"
            onClick={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height={175}
                muted={true}
                poster="https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/midnight-special.jpg"
                src="https://download.blender.org/durian/trailer/sintel_trailer-480p.mp4"
                style={
                  Object {
                    "height": "100%",
                    "objectFit": "cover",
                    "verticalAlign": "top",
                    "width": "100%",
                  }
                }
                width={280}
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              Midnight Special
            </h3>
          </a>
        </article>
        <article
          className="small-movie-card catalog__movies-card"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <a
            className="small-movie-card__link"
            href="/films/4"
            onClick={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height={175}
                muted={true}
                poster="https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/matrix.jpg"
                src="https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm"
                style={
                  Object {
                    "height": "100%",
                    "objectFit": "cover",
                    "verticalAlign": "top",
                    "width": "100%",
                  }
                }
                width={280}
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              Matrix
            </h3>
          </a>
        </article>
        <article
          className="small-movie-card catalog__movies-card"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <a
            className="small-movie-card__link"
            href="/films/5"
            onClick={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height={175}
                muted={true}
                poster="https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/legend.jpg"
                src="https://download.blender.org/durian/trailer/sintel_trailer-480p.mp4"
                style={
                  Object {
                    "height": "100%",
                    "objectFit": "cover",
                    "verticalAlign": "top",
                    "width": "100%",
                  }
                }
                width={280}
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              Legend
            </h3>
          </a>
        </article>
        <article
          className="small-movie-card catalog__movies-card"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <a
            className="small-movie-card__link"
            href="/films/6"
            onClick={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height={175}
                muted={true}
                poster="https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/gangs_of_new_york.jpg"
                src="https://download.blender.org/durian/trailer/sintel_trailer-480p.mp4"
                style={
                  Object {
                    "height": "100%",
                    "objectFit": "cover",
                    "verticalAlign": "top",
                    "width": "100%",
                  }
                }
                width={280}
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              Gangs of new york
            </h3>
          </a>
        </article>
        <article
          className="small-movie-card catalog__movies-card"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <a
            className="small-movie-card__link"
            href="/films/7"
            onClick={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height={175}
                muted={true}
                poster="https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/A_Star_Is_Born.jpg"
                src="https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm"
                style={
                  Object {
                    "height": "100%",
                    "objectFit": "cover",
                    "verticalAlign": "top",
                    "width": "100%",
                  }
                }
                width={280}
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              A Star Is Born
            </h3>
          </a>
        </article>
        <article
          className="small-movie-card catalog__movies-card"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <a
            className="small-movie-card__link"
            href="/films/8"
            onClick={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height={175}
                muted={true}
                poster="https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/beach.jpg"
                src="https://download.blender.org/durian/trailer/sintel_trailer-480p.mp4"
                style={
                  Object {
                    "height": "100%",
                    "objectFit": "cover",
                    "verticalAlign": "top",
                    "width": "100%",
                  }
                }
                width={280}
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              Beach
            </h3>
          </a>
        </article>
      </div>
      <div
        className="catalog__more"
      >
        <button
          className="catalog__button"
          onClick={[Function]}
          type="button"
        >
          Show more
        </button>
      </div>
    </section>
    <footer
      className="page-footer"
    >
      <div
        className="logo"
      >
        <a
          className="logo__link logo__link--light"
        >
          <span
            className="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            className="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            className="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <div
        className="copyright"
      >
        <p>
          © 2019 What to watch Ltd.
        </p>
      </div>
    </footer>
  </div>,
]
`;

exports[`MainPage render renders MainPage component with active genre eq All genres and shownFilms eq 16 1`] = `
Array [
  <section
    className="movie-card"
  >
    <div
      className="movie-card__bg"
    >
      <img
        alt="Bronson"
        src="https://assets.htmlacademy.ru/intensives/javascript-3/film/background/bronson.jpg"
        style={
          Object {
            "backgroundColor": "#73B39A",
          }
        }
      />
    </div>
    <h1
      className="visually-hidden"
    >
      WTW
    </h1>
    <header
      className="page-header movie-card__head"
    >
      <div
        className="logo"
      >
        <a
          className="logo__link "
        >
          <span
            className="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            className="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            className="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <div
        className="user-block"
      >
        <a
          href="/mylist"
          onClick={[Function]}
        >
          <div
            className="user-block__avatar"
          >
            <img
              alt="User avatar"
              height="63"
              src="img/avatar.jpg"
              width="63"
            />
          </div>
        </a>
      </div>
    </header>
    <div
      className="movie-card__wrap"
    >
      <div
        className="movie-card__info"
      >
        <div
          className="movie-card__poster"
        >
          <img
            alt="Bronson"
            height="327"
            src="https://assets.htmlacademy.ru/intensives/javascript-3/film/poster/bronson.jpg"
            width="218"
          />
        </div>
        <div
          className="movie-card__desc"
        >
          <h2
            className="movie-card__title"
          >
            Bronson
          </h2>
          <p
            className="movie-card__meta"
          >
            <span
              className="movie-card__genre"
            >
              Action
            </span>
            <span
              className="movie-card__year"
            >
              2008
            </span>
          </p>
          <div
            className="movie-card__buttons"
          >
            <button
              className="btn btn--play movie-card__button"
              onClick={[Function]}
              type="button"
            >
              <svg
                height="19"
                viewBox="0 0 19 19"
                width="19"
              >
                <use
                  xlinkHref="#play-s"
                />
              </svg>
              <span>
                Play
              </span>
            </button>
            <button
              className="btn btn--list movie-card__button"
              onClick={[Function]}
              type="button"
            >
              <svg
                height="20"
                viewBox="0 0 19 20"
                width="19"
              >
                <use
                  xlinkHref="#add"
                />
              </svg>
              <span>
                My list
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </section>,
  <div
    className="page-content"
  >
    <section
      className="catalog"
    >
      <h2
        className="catalog__title visually-hidden"
      >
        Catalog
      </h2>
      <ul
        className="catalog__genres-list"
      >
        <li
          className="catalog__genres-item catalog__genres-item--active"
          data-genre="All genres"
          onClick={[Function]}
        >
          <a
            className="catalog__genres-link"
            href="#"
          >
            All genres
          </a>
        </li>
        <li
          className="catalog__genres-item "
          data-genre="Action"
          onClick={[Function]}
        >
          <a
            className="catalog__genres-link"
            href="#"
          >
            Action
          </a>
        </li>
        <li
          className="catalog__genres-item "
          data-genre="Crime"
          onClick={[Function]}
        >
          <a
            className="catalog__genres-link"
            href="#"
          >
            Crime
          </a>
        </li>
        <li
          className="catalog__genres-item "
          data-genre="Drama"
          onClick={[Function]}
        >
          <a
            className="catalog__genres-link"
            href="#"
          >
            Drama
          </a>
        </li>
        <li
          className="catalog__genres-item "
          data-genre="Adventure"
          onClick={[Function]}
        >
          <a
            className="catalog__genres-link"
            href="#"
          >
            Adventure
          </a>
        </li>
        <li
          className="catalog__genres-item "
          data-genre="Comedy"
          onClick={[Function]}
        >
          <a
            className="catalog__genres-link"
            href="#"
          >
            Comedy
          </a>
        </li>
      </ul>
      <div
        className="catalog__movies-list"
      >
        <article
          className="small-movie-card catalog__movies-card"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <a
            className="small-movie-card__link"
            href="/films/1"
            onClick={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height={175}
                muted={true}
                poster="https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/bronson.jpg"
                src="https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm"
                style={
                  Object {
                    "height": "100%",
                    "objectFit": "cover",
                    "verticalAlign": "top",
                    "width": "100%",
                  }
                }
                width={280}
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              Bronson
            </h3>
          </a>
        </article>
        <article
          className="small-movie-card catalog__movies-card"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <a
            className="small-movie-card__link"
            href="/films/2"
            onClick={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height={175}
                muted={true}
                poster="https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/pulp-fiction.jpg"
                src="https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm"
                style={
                  Object {
                    "height": "100%",
                    "objectFit": "cover",
                    "verticalAlign": "top",
                    "width": "100%",
                  }
                }
                width={280}
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              Pulp Fiction
            </h3>
          </a>
        </article>
        <article
          className="small-movie-card catalog__movies-card"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <a
            className="small-movie-card__link"
            href="/films/3"
            onClick={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height={175}
                muted={true}
                poster="https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/midnight-special.jpg"
                src="https://download.blender.org/durian/trailer/sintel_trailer-480p.mp4"
                style={
                  Object {
                    "height": "100%",
                    "objectFit": "cover",
                    "verticalAlign": "top",
                    "width": "100%",
                  }
                }
                width={280}
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              Midnight Special
            </h3>
          </a>
        </article>
        <article
          className="small-movie-card catalog__movies-card"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <a
            className="small-movie-card__link"
            href="/films/4"
            onClick={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height={175}
                muted={true}
                poster="https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/matrix.jpg"
                src="https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm"
                style={
                  Object {
                    "height": "100%",
                    "objectFit": "cover",
                    "verticalAlign": "top",
                    "width": "100%",
                  }
                }
                width={280}
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              Matrix
            </h3>
          </a>
        </article>
        <article
          className="small-movie-card catalog__movies-card"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <a
            className="small-movie-card__link"
            href="/films/5"
            onClick={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height={175}
                muted={true}
                poster="https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/legend.jpg"
                src="https://download.blender.org/durian/trailer/sintel_trailer-480p.mp4"
                style={
                  Object {
                    "height": "100%",
                    "objectFit": "cover",
                    "verticalAlign": "top",
                    "width": "100%",
                  }
                }
                width={280}
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              Legend
            </h3>
          </a>
        </article>
        <article
          className="small-movie-card catalog__movies-card"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <a
            className="small-movie-card__link"
            href="/films/6"
            onClick={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height={175}
                muted={true}
                poster="https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/gangs_of_new_york.jpg"
                src="https://download.blender.org/durian/trailer/sintel_trailer-480p.mp4"
                style={
                  Object {
                    "height": "100%",
                    "objectFit": "cover",
                    "verticalAlign": "top",
                    "width": "100%",
                  }
                }
                width={280}
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              Gangs of new york
            </h3>
          </a>
        </article>
        <article
          className="small-movie-card catalog__movies-card"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <a
            className="small-movie-card__link"
            href="/films/7"
            onClick={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height={175}
                muted={true}
                poster="https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/A_Star_Is_Born.jpg"
                src="https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm"
                style={
                  Object {
                    "height": "100%",
                    "objectFit": "cover",
                    "verticalAlign": "top",
                    "width": "100%",
                  }
                }
                width={280}
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              A Star Is Born
            </h3>
          </a>
        </article>
        <article
          className="small-movie-card catalog__movies-card"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <a
            className="small-movie-card__link"
            href="/films/8"
            onClick={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height={175}
                muted={true}
                poster="https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/beach.jpg"
                src="https://download.blender.org/durian/trailer/sintel_trailer-480p.mp4"
                style={
                  Object {
                    "height": "100%",
                    "objectFit": "cover",
                    "verticalAlign": "top",
                    "width": "100%",
                  }
                }
                width={280}
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              Beach
            </h3>
          </a>
        </article>
        <article
          className="small-movie-card catalog__movies-card"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <a
            className="small-movie-card__link"
            href="/films/9"
            onClick={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height={175}
                muted={true}
                poster="https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/aviator.jpg"
                src="https://download.blender.org/durian/trailer/sintel_trailer-480p.mp4"
                style={
                  Object {
                    "height": "100%",
                    "objectFit": "cover",
                    "verticalAlign": "top",
                    "width": "100%",
                  }
                }
                width={280}
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              Aviator
            </h3>
          </a>
        </article>
        <article
          className="small-movie-card catalog__movies-card"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <a
            className="small-movie-card__link"
            href="/films/10"
            onClick={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height={175}
                muted={true}
                poster="https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/johnny-english.jpg"
                src="https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm"
                style={
                  Object {
                    "height": "100%",
                    "objectFit": "cover",
                    "verticalAlign": "top",
                    "width": "100%",
                  }
                }
                width={280}
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              Johnny English
            </h3>
          </a>
        </article>
      </div>
    </section>
    <footer
      className="page-footer"
    >
      <div
        className="logo"
      >
        <a
          className="logo__link logo__link--light"
        >
          <span
            className="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            className="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            className="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <div
        className="copyright"
      >
        <p>
          © 2019 What to watch Ltd.
        </p>
      </div>
    </footer>
  </div>,
]
`;

exports[`MainPage render renders MainPage component with promo film that is in MyList 1`] = `
Array [
  <section
    className="movie-card"
  >
    <div
      className="movie-card__bg"
    >
      <img
        alt="Bronson"
        src="https://assets.htmlacademy.ru/intensives/javascript-3/film/background/bronson.jpg"
        style={
          Object {
            "backgroundColor": "#73B39A",
          }
        }
      />
    </div>
    <h1
      className="visually-hidden"
    >
      WTW
    </h1>
    <header
      className="page-header movie-card__head"
    >
      <div
        className="logo"
      >
        <a
          className="logo__link "
        >
          <span
            className="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            className="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            className="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <div
        className="user-block"
      >
        <a
          href="/mylist"
          onClick={[Function]}
        >
          <div
            className="user-block__avatar"
          >
            <img
              alt="User avatar"
              height="63"
              src="img/avatar.jpg"
              width="63"
            />
          </div>
        </a>
      </div>
    </header>
    <div
      className="movie-card__wrap"
    >
      <div
        className="movie-card__info"
      >
        <div
          className="movie-card__poster"
        >
          <img
            alt="Bronson"
            height="327"
            src="https://assets.htmlacademy.ru/intensives/javascript-3/film/poster/bronson.jpg"
            width="218"
          />
        </div>
        <div
          className="movie-card__desc"
        >
          <h2
            className="movie-card__title"
          >
            Bronson
          </h2>
          <p
            className="movie-card__meta"
          >
            <span
              className="movie-card__genre"
            >
              Action
            </span>
            <span
              className="movie-card__year"
            >
              2008
            </span>
          </p>
          <div
            className="movie-card__buttons"
          >
            <button
              className="btn btn--play movie-card__button"
              onClick={[Function]}
              type="button"
            >
              <svg
                height="19"
                viewBox="0 0 19 19"
                width="19"
              >
                <use
                  xlinkHref="#play-s"
                />
              </svg>
              <span>
                Play
              </span>
            </button>
            <button
              className="btn btn--list movie-card__button"
              onClick={[Function]}
              type="button"
            >
              <svg
                height="14"
                viewBox="0 0 18 14"
                width="18"
              >
                <use
                  xlinkHref="#in-list"
                />
              </svg>
              <span>
                My list
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </section>,
  <div
    className="page-content"
  >
    <section
      className="catalog"
    >
      <h2
        className="catalog__title visually-hidden"
      >
        Catalog
      </h2>
      <ul
        className="catalog__genres-list"
      >
        <li
          className="catalog__genres-item catalog__genres-item--active"
          data-genre="All genres"
          onClick={[Function]}
        >
          <a
            className="catalog__genres-link"
            href="#"
          >
            All genres
          </a>
        </li>
        <li
          className="catalog__genres-item "
          data-genre="Action"
          onClick={[Function]}
        >
          <a
            className="catalog__genres-link"
            href="#"
          >
            Action
          </a>
        </li>
        <li
          className="catalog__genres-item "
          data-genre="Crime"
          onClick={[Function]}
        >
          <a
            className="catalog__genres-link"
            href="#"
          >
            Crime
          </a>
        </li>
        <li
          className="catalog__genres-item "
          data-genre="Drama"
          onClick={[Function]}
        >
          <a
            className="catalog__genres-link"
            href="#"
          >
            Drama
          </a>
        </li>
        <li
          className="catalog__genres-item "
          data-genre="Adventure"
          onClick={[Function]}
        >
          <a
            className="catalog__genres-link"
            href="#"
          >
            Adventure
          </a>
        </li>
        <li
          className="catalog__genres-item "
          data-genre="Comedy"
          onClick={[Function]}
        >
          <a
            className="catalog__genres-link"
            href="#"
          >
            Comedy
          </a>
        </li>
      </ul>
      <div
        className="catalog__movies-list"
      >
        <article
          className="small-movie-card catalog__movies-card"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <a
            className="small-movie-card__link"
            href="/films/1"
            onClick={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height={175}
                muted={true}
                poster="https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/bronson.jpg"
                src="https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm"
                style={
                  Object {
                    "height": "100%",
                    "objectFit": "cover",
                    "verticalAlign": "top",
                    "width": "100%",
                  }
                }
                width={280}
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              Bronson
            </h3>
          </a>
        </article>
        <article
          className="small-movie-card catalog__movies-card"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <a
            className="small-movie-card__link"
            href="/films/2"
            onClick={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height={175}
                muted={true}
                poster="https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/pulp-fiction.jpg"
                src="https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm"
                style={
                  Object {
                    "height": "100%",
                    "objectFit": "cover",
                    "verticalAlign": "top",
                    "width": "100%",
                  }
                }
                width={280}
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              Pulp Fiction
            </h3>
          </a>
        </article>
        <article
          className="small-movie-card catalog__movies-card"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <a
            className="small-movie-card__link"
            href="/films/3"
            onClick={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height={175}
                muted={true}
                poster="https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/midnight-special.jpg"
                src="https://download.blender.org/durian/trailer/sintel_trailer-480p.mp4"
                style={
                  Object {
                    "height": "100%",
                    "objectFit": "cover",
                    "verticalAlign": "top",
                    "width": "100%",
                  }
                }
                width={280}
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              Midnight Special
            </h3>
          </a>
        </article>
        <article
          className="small-movie-card catalog__movies-card"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <a
            className="small-movie-card__link"
            href="/films/4"
            onClick={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height={175}
                muted={true}
                poster="https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/matrix.jpg"
                src="https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm"
                style={
                  Object {
                    "height": "100%",
                    "objectFit": "cover",
                    "verticalAlign": "top",
                    "width": "100%",
                  }
                }
                width={280}
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              Matrix
            </h3>
          </a>
        </article>
        <article
          className="small-movie-card catalog__movies-card"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <a
            className="small-movie-card__link"
            href="/films/5"
            onClick={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height={175}
                muted={true}
                poster="https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/legend.jpg"
                src="https://download.blender.org/durian/trailer/sintel_trailer-480p.mp4"
                style={
                  Object {
                    "height": "100%",
                    "objectFit": "cover",
                    "verticalAlign": "top",
                    "width": "100%",
                  }
                }
                width={280}
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              Legend
            </h3>
          </a>
        </article>
        <article
          className="small-movie-card catalog__movies-card"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <a
            className="small-movie-card__link"
            href="/films/6"
            onClick={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height={175}
                muted={true}
                poster="https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/gangs_of_new_york.jpg"
                src="https://download.blender.org/durian/trailer/sintel_trailer-480p.mp4"
                style={
                  Object {
                    "height": "100%",
                    "objectFit": "cover",
                    "verticalAlign": "top",
                    "width": "100%",
                  }
                }
                width={280}
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              Gangs of new york
            </h3>
          </a>
        </article>
        <article
          className="small-movie-card catalog__movies-card"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <a
            className="small-movie-card__link"
            href="/films/7"
            onClick={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height={175}
                muted={true}
                poster="https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/A_Star_Is_Born.jpg"
                src="https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm"
                style={
                  Object {
                    "height": "100%",
                    "objectFit": "cover",
                    "verticalAlign": "top",
                    "width": "100%",
                  }
                }
                width={280}
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              A Star Is Born
            </h3>
          </a>
        </article>
        <article
          className="small-movie-card catalog__movies-card"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <a
            className="small-movie-card__link"
            href="/films/8"
            onClick={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height={175}
                muted={true}
                poster="https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/beach.jpg"
                src="https://download.blender.org/durian/trailer/sintel_trailer-480p.mp4"
                style={
                  Object {
                    "height": "100%",
                    "objectFit": "cover",
                    "verticalAlign": "top",
                    "width": "100%",
                  }
                }
                width={280}
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              Beach
            </h3>
          </a>
        </article>
        <article
          className="small-movie-card catalog__movies-card"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <a
            className="small-movie-card__link"
            href="/films/9"
            onClick={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height={175}
                muted={true}
                poster="https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/aviator.jpg"
                src="https://download.blender.org/durian/trailer/sintel_trailer-480p.mp4"
                style={
                  Object {
                    "height": "100%",
                    "objectFit": "cover",
                    "verticalAlign": "top",
                    "width": "100%",
                  }
                }
                width={280}
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              Aviator
            </h3>
          </a>
        </article>
        <article
          className="small-movie-card catalog__movies-card"
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
        >
          <a
            className="small-movie-card__link"
            href="/films/10"
            onClick={[Function]}
          >
            <div
              className="small-movie-card__image"
            >
              <video
                height={175}
                muted={true}
                poster="https://assets.htmlacademy.ru/intensives/javascript-3/film/preview/johnny-english.jpg"
                src="https://upload.wikimedia.org/wikipedia/commons/transcoded/b/b3/Big_Buck_Bunny_Trailer_400p.ogv/Big_Buck_Bunny_Trailer_400p.ogv.360p.webm"
                style={
                  Object {
                    "height": "100%",
                    "objectFit": "cover",
                    "verticalAlign": "top",
                    "width": "100%",
                  }
                }
                width={280}
              />
            </div>
            <h3
              className="small-movie-card__title"
            >
              Johnny English
            </h3>
          </a>
        </article>
      </div>
    </section>
    <footer
      className="page-footer"
    >
      <div
        className="logo"
      >
        <a
          className="logo__link logo__link--light"
        >
          <span
            className="logo__letter logo__letter--1"
          >
            W
          </span>
          <span
            className="logo__letter logo__letter--2"
          >
            T
          </span>
          <span
            className="logo__letter logo__letter--3"
          >
            W
          </span>
        </a>
      </div>
      <div
        className="copyright"
      >
        <p>
          © 2019 What to watch Ltd.
        </p>
      </div>
    </footer>
  </div>,
]
`;
